Fixup styling on table, table info, and main spacing

--- a/app/styles/base.scss
+++ b/app/styles/base.scss
@@ -91,7 +91,7 @@ nav > a.userphoto {
 }
 
 main {
-  padding: 2em;
+  padding: 3em 0;
   display: flex;
   flex-direction: column;
   flex: 1;
