--- a/app/styles/st-table-host.scss
+++ b/app/styles/st-table-host.scss
@@ -18,4 +18,13 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+
+  h3 {
+    font-size: 1.5rem;
+    color: #999;
+
+    .data {
+      color: black;
+    }
+  }
 }
