--- a/app/styles/st-table.scss
+++ b/app/styles/st-table.scss
@@ -18,4 +18,5 @@
   font-size: 4rem;
   font-weight: bold;
   cursor: pointer;
+  background: white;
 }
